# haskell-fun

./: .gitignore  IconStuff.sublime-project  TomK.lkshs  TomK.lkshw
FirstOne/: FirstOne.cabal  FirstOne.lkshf
FirstOne/messages/: en.msg
FirstOne/src/: L10N.hi  L10N.hs  Main.hi  Main.hs
IconStuff/: IconStuff.cabal
IconStuff/messages/: en-FU.msg
IconStuff/src/: L10N.hs  Main.hs
IconStuff/src/MacOS/: GetLocales.hs
IconStuff/src/Windows/: GetLocales.hs
