name: FirstOne
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: First One
data-dir: ""

executable FirstOne
    build-depends: QuickCheck -any, base -any, shakespeare-i18n -any,
                   text -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: L10N

test-suite test-FirstOne
    build-depends: QuickCheck -any, base -any, shakespeare-i18n -any,
                   text -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
