name: IconStuff
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: Tom Kludy
stability: Unstable
synopsis: Functions for extracting and converting icons
data-dir: ""

executable IconStuff
    build-depends: base -any, shakespeare-i18n -any, text -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: L10N, GetLocales
    if os(windows)
        hs-source-dirs: src/Windows
    if os(darwin)
        hs-source-dirs: src/MacOS
